--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -42,7 +42,7 @@
 
                             <h5>Q1: Which best matches your temperament?</h5>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Choose</label>
+                                <label for="exampleFormControlSelect1">Choose an option</label>
                                 <select class="form-control" id="select-temperament">
                                     <option value=0>Friendly</option>
                                     <option value=1>Calm</option>
@@ -56,7 +56,7 @@
 
                             <h5>Q2: Which best describes your eating habits?</h5>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Choose</label>
+                                <label for="exampleFormControlSelect1">Choose an option</label>
                                 <select class="form-control" id="select-eating">
                                     <option value=0>Disciplined</option>
                                     <option value=1>Indifferent</option>
@@ -70,7 +70,7 @@
 
                             <h5>Q3: How do you feel about other people?</h5>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Choose</label>
+                                <label for="exampleFormControlSelect1">Choose an option</label>
                                 <select class="form-control" id="select-social">
                                     <option value=0>Fine, but I prefer animals</option>
                                     <option value=1>I wish they left me alone</option>
@@ -84,7 +84,7 @@
 
                             <h5>Q4: Describe your voice</h5>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Choose</label>
+                                <label for="exampleFormControlSelect1">Choose an option</label>
                                 <select class="form-control" id="select-voice">
                                     <option value=0>Loud</option>
                                     <option value=1>High pitched</option>
